Fixed dark mode for about button

--- a/src/main/resources/styles/dark-theme.css
+++ b/src/main/resources/styles/dark-theme.css
@@ -6,6 +6,10 @@
     -fx-control-inner-background-alt: -fx-control-inner-background ;
 }
 
+.about-button {
+    -fx-fill: white;
+}
+
 .label{
     -fx-text-fill: lightgray;
 }
